--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,10 +1,20 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Jan 26, 2018, 1:36:15 PM
-    Author     : Brandon
-*/
+body{
+    height: 100%;
+    padding-top: 150px;
+    color: rgba(255,255,255,1);
+    background: -webkit-linear-gradient(-90deg, rgba(60,100,160,1) 0, rgba(50,140,200,1) 50%, rgba(60,100,160,1) 100%);
+    background: -moz-linear-gradient(180deg, rgba(60,100,160,1) 0, rgba(50,140,200,1) 50%, rgba(60,100,160,1) 100%);
+    background: linear-gradient(180deg, rgba(60,100,160,1) 0, rgba(50,140,200,1) 50%,rgba(60,100,160,1) 100%);
+    background-repeat: no-repeat;
+}
 
+.navbar{
+  color: rgba(255,255,255,1);
+  background: -webkit-linear-gradient(-90deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
+  background: -moz-linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
+  background: linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
+}
+
+nav > h1 {
+    text-align: center;
+}
