--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,6 +1,11 @@
+html{
+    height:100%;
+    margin:0;
+}
+
 body{
     height: 100%;
-    padding-top: 150px;
+    padding-top: 15%;
     color: rgba(255,255,255,1);
     background: -webkit-linear-gradient(-90deg, rgba(60,100,160,1) 0, rgba(50,140,200,1) 50%, rgba(60,100,160,1) 100%);
     background: -moz-linear-gradient(180deg, rgba(60,100,160,1) 0, rgba(50,140,200,1) 50%, rgba(60,100,160,1) 100%);
@@ -9,12 +14,24 @@ body{
 }
 
 .navbar{
-  color: rgba(255,255,255,1);
-  background: -webkit-linear-gradient(-90deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
-  background: -moz-linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
-  background: linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
+    color: rgba(255,255,255,1);
+    background: -webkit-linear-gradient(-90deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
+    background: -moz-linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
+    background: linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
 }
 
 nav > h1 {
     text-align: center;
+}
+
+
+.footer{
+    text-align: right;
+    width:100%;
+    position:absolute;
+    bottom:0;
+    color: rgba(255,255,255,1);
+    background: -webkit-linear-gradient(-90deg, rgba(124,188,10,1) 0, rgba(210,244,146,1) 100%);
+    background: -moz-linear-gradient(180deg, rgba(124,188,10,1) 0, rgba(210,244,146,1) 100%);
+    background: linear-gradient(180deg, rgba(124,188,10,1) 0, rgba(210,244,146,1) 100%);
 }
