Created index/home Content More Css Tinkering

--- a/public_html/css/product-description.css
+++ b/public_html/css/product-description.css
@@ -6,5 +6,20 @@ form{
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
     text-align: left;
+}
+
+form > .btn{
+    border-radius: 8px;
+    color: #000000;
+    background: -webkit-linear-gradient(-90deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
+    background: -moz-linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
+    background: linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
+    background-repeat: no-repeat;
+}
+
+form > .btn:hover{
+    box-shadow:inset 0px 0px 9px #0000ff;
 }
