--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -5,7 +5,7 @@ html{
 
 body{
     height: 100%;
-    padding-top:140px;
+    padding-top:120px;
     padding-bottom: 40px;
     color: rgba(255,255,255,1);
     background: -webkit-linear-gradient(-90deg, rgba(60,100,160,1) 0, rgba(50,140,200,1) 50%, rgba(60,100,160,1) 100%);
@@ -19,9 +19,10 @@ body{
     background: -webkit-linear-gradient(-90deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
     background: -moz-linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
     background: linear-gradient(180deg, rgba(210,244,146,1) 0, rgba(124,188,10,1) 100%);
+    z-index:9;
 }
 
-nav > h1 {
+nav{
     text-align: center;
 }
 
@@ -38,6 +39,7 @@ nav > h1 {
     background: linear-gradient(180deg, rgba(124,188,10,1) 0, rgba(210,244,146,1) 100%);
     background-position: 0% 0%;
     background-attachment: scroll;
+    z-index:9;
 }
 
 .footer_contents {
