--- a/public_html/css/products.css
+++ b/public_html/css/products.css
@@ -3,7 +3,17 @@
     background:#DDDDDD;
 }
 
+.body-contnet > h2{
+    text-align: center;
+    margin-bottom: 2%;
+}
+
 .body-contnet > nav{
     text-align: center;
     margin: 1%;
+    width:100%;
+    position: fixed;
+    bottom:0pt;
+    margin-right: auto;
+    margin-left: auto;
 }
